--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -5,20 +5,30 @@
   roles:
     - role: jamie.install-httpd
       httpd_vhost_directory: /srv
-
     - role: jamie.create_vhost
       vhost_webserver_address: webserver.example.local
       vhost_webserver_port: 8000
-
-    - role: jamie.create_vhost
-      vhost_webserver_address: jamie.example.local
-      vhost_webserver_port: 8080
   handlers:
     - name : httpd_restart
       service:
         name: httpd
         state: restarted
-    
+    - name: firewalld_restart
+      service:
+        name: firewalld
+        state: restarted
+- hosts: web
+  tasks:
+    - setup:
+- hosts: lb
+  roles:
+    - role: jamie.install-haproxy
+
+  handlers:
+    - name : haproxy_restart
+      service:
+        name: haproxy
+        state: restarted
     - name: firewalld_restart
       service:
         name: firewalld
