--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -7,7 +7,10 @@
       httpd_vhost_directory: /srv
     - role: jamie.create_vhost
       vhost_webserver_address: webserver.example.local
-      vhost_webserver_port: 8000
+      vhost_webserver_port: 80
+    - role: jamie.create_vhost
+      vhost_webserver_address: webserver1.example.local
+      vhost_webserver_port: 800
   handlers:
     - name : httpd_restart
       service:
@@ -21,6 +24,9 @@
   tasks:
     - setup:
 - hosts: lb
+  tags: lb
+  vars:
+    se_linux_required: "TRUE"     #Set to "TRUE" to set SELinux port type for HAProxy, set to "" to disable it.
   roles:
     - role: jamie.install-haproxy
 
